--- a/sass/init.scss
+++ b/sass/init.scss
@@ -132,7 +132,7 @@ main {
 html,
 body {
     position: relative;
-    height: 100%;
+    height: auto;
     // font-family: 'Outfit';
     // overflow-x: hidden;
     font-family: "Montserrat" !important;
