--- a/sass/init.scss
+++ b/sass/init.scss
@@ -46,7 +46,7 @@ section {
 .slick {
     &-next,
     &-prev {
-        z-index: 17 !important;
+        z-index: 20 !important;
         width: 40px;
         height: 40px;
         border-radius: 50%;
@@ -66,18 +66,18 @@ section {
         }
     }
     &-prev {
-        left: -16px !important;
+        left: 16px !important;
         @media screen and (max-width: 768px) {
-            left: -16px !important;
+            left: 16px !important;
         }
         &::before {
             content: "\f104" !important;
         }
     }
     &-next {
-        right: -16px !important;
+        right: 16px !important;
         @media screen and (max-width: 768px) {
-            right: -16px !important;
+            right: 16px !important;
         }
         &::before {
             content: "\f105" !important;
@@ -124,6 +124,10 @@ section {
         height: 4rem;
         text-transform: uppercase;
     }
+}
+
+.sliderx {
+    overflow-x: hidden;
 }
 
 main {
@@ -293,4 +297,16 @@ section {
 .dashboard-content {
     display: none;
     // color: red;
+}
+
+.he {
+    height: 100vh !important;
+    @media screen and (max-width: 768px) {
+        height: 50vh !important;
+    }
+    iframe {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
 }
