--- a/sass/init.scss
+++ b/sass/init.scss
@@ -51,6 +51,10 @@ section {
         height: 40px;
         border-radius: 50%;
         background: rgba(#ce9352, 0.8);
+        @media screen and (max-width: 768px) {
+            width: 30px;
+            height: 30px;
+        }
         &:focus,
         &:hover {
             background: rgba(#ce9352, 0.5);
@@ -61,14 +65,14 @@ section {
             color: #fff !important;
             font-weight: 700 !important;
             @media screen and (max-width: 766px) {
-                font-size: 32px !important;
+                font-size: 24px !important;
             }
         }
     }
     &-prev {
         left: 16px !important;
         @media screen and (max-width: 768px) {
-            left: 16px !important;
+            left: 0px !important;
         }
         &::before {
             content: "\f104" !important;
@@ -77,11 +81,18 @@ section {
     &-next {
         right: 16px !important;
         @media screen and (max-width: 768px) {
-            right: 16px !important;
+            right: 0px !important;
         }
         &::before {
             content: "\f105" !important;
         }
+    }
+}
+
+iframe {
+    height: 50vh;
+    @media screen and (max-width: 768px) {
+        height: 35vh;
     }
 }
 
